<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/light_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.magnum.symptom.client.PatientActivity" >

    <Button
        android:id="@+id/patientsButton"
        style="@style/AppTheme"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/recipeButton"
        android:layout_alignBottom="@+id/recipeButton"
        android:layout_alignLeft="@+id/alarmsButton"
        android:layout_alignStart="@+id/alarmsButton"
        android:layout_below="@+id/alarmsButton"
        android:layout_centerHorizontal="true"
        android:text="@string/patients"
        android:visibility="gone" />

    <Button
        android:id="@+id/checkInButton"
        style="@style/AppTheme"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_above="@+id/recipeButton"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@+id/alarmsButton"
        android:layout_toStartOf="@+id/alarmsButton"
        android:text="@string/check_in" />

    <Button
        android:id="@+id/recipeButton"
        style="@style/AppTheme"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/checkInButton"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/checkInButton"
        android:layout_centerHorizontal="true"
        android:text="@string/recipe"
        android:textColor="@color/royal_blue" />

    <Button
        android:id="@+id/alarmsButton"
        style="@style/AppTheme"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/checkInButton"
        android:layout_centerHorizontal="true"
        android:text="@string/alarms" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="400dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/changePicButton"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/checkInButton"
        android:layout_centerHorizontal="true"
        android:text="@string/changePic" />

</RelativeLayout>